# ros_pkg_gen

./: .gitignore  .gitlab-ci.yml  .rosinstall  .travis.yml  ChangeLog.md  LICENSE.md  README.md
package_generator/: CMakeLists.txt  README.md  package.xml  setup.py
package_generator/sandbox/: bad_dico.yaml  dummy_dict_trial.py  load_python_file.py
package_generator/scripts/: check_template  generate_package  generate_xml_skel  package_xml_parser
package_generator/src/package_generator/: README.md  code_generator.py  debug_ros_xml.xml  enhanced_object.py  file_update_management.py  generate_dict.py  generate_package.py  jinja_generator.py  package_xml_parser.py  template_spec.py
package_generator/tests/: extended.ros_package  test_code_generator.py  test_generate_dict.py  test_jinja_generator.py  test_package_generator.py  test_template_config.py  test_template_sanity.py  test_update.py  test_xml_parser.py
package_generator/tests/data/: demo.ros_package
package_generator_templates/: CMakeLists.txt  README.md  README_designer.md  package.xml
package_generator_templates/samples/cpp_specs/: dummy_package.ros_package  great_direct_pub_sub.ros_package  great_multi_package_pub_sub.ros_package  great_package_action.ros_packag  great_package_pub_sub.ros_package  great_package_services.ros_package  great_package_tf.ros_package  pkg_param.ros_package
package_generator_templates/samples/py_specs/: py_dummy_package.ros_package  py_great_actions.ros_package  py_great_direct_pub_sub.ros_package  py_great_multi_package_pub_sub.ros_package  py_great_services.ros_package  py_pkg_param.ros_package
package_generator_templates/templates/: .gitignore
package_generator_templates/templates/cpp_node_update/: README.md
package_generator_templates/templates/cpp_node_update/common/src/: node_common.cpp
package_generator_templates/templates/cpp_node_update/config/: dictionary.yaml  functions.py  generator.yaml
package_generator_templates/templates/cpp_node_update/ros/src/: node_ros.cpp
package_generator_templates/templates/cpp_node_update/template/: CMakeLists.txt  README.md  package.xml
package_generator_templates/templates/cpp_node_update/template/cfg/: component.cfg  node.cfg
package_generator_templates/templates/cpp_node_update/template/common/src/: component_common.cpp  node_common.cpp
package_generator_templates/templates/cpp_node_update/template/ros/src/: component_ros.cpp  node_ros.cpp
package_generator_templates/templates/cpp_node_update/template/test/: test_component_dyn_param.test  test_component_hz_loop.test
package_generator_templates/templates/cpp_service_server/: README.md
package_generator_templates/templates/cpp_service_server/config/: dictionary.yaml  functions.py
package_generator_templates/templates/cpp_service_server/template/: CMakeLists.txt  README.md
package_generator_templates/templates/cpp_service_server/template/common/src/: component_common.cpp  node_common.cpp
package_generator_templates/templates/cpp_service_server/template/ros/src/: component_ros.cpp  node_ros.cpp
package_generator_templates/templates/msg_srv_action/: README.md
package_generator_templates/templates/msg_srv_action/config/: dictionary.yaml  functions.py
package_generator_templates/templates/msg_srv_action/template/: .gen_maintain  CMakeLists.txt  README.md  package.xml
package_generator_templates/templates/nodetest/: README.md
package_generator_templates/templates/nodetest/config/: dictionary.yaml  functions.py
package_generator_templates/templates/nodetest/template/: CMakeLists.txt  README.md  package.xml
package_generator_templates/templates/nodetest/template/test/: component_dyn_param.test  component_filter.test  component_hz_loop.test  component_pub.test  component_service.test
package_generator_templates/templates/python_node_update/: CMakeLists.txt  README.md  setup.py
package_generator_templates/templates/python_node_update/cfg/: node.cfg
package_generator_templates/templates/python_node_update/config/: dictionary.yaml  functions.py
package_generator_templates/templates/python_node_update/src/package_name/: node_impl.py  node_ros.py
package_generator_templates/templates/python_node_update/template/: CMakeLists.txt  README.md  package.xml
package_generator_templates/templates/python_node_update/template/cfg/: node.cfg
package_generator_templates/templates/python_node_update/template/scripts/: component  node
package_generator_templates/templates/python_node_update/template/src/package_name/: component_impl.py  component_ros.py  node_impl.py  node_ros.py
package_generator_templates/templates/python_node_update/template/test/: test_component_hz_loop.test
package_generator_templates/templates/python_service_server/config/: dictionary.yaml  functions.py
package_generator_templates/templates/python_service_server/template/: CMakeLists.txt  README.md  package.xml  setup.py
package_generator_templates/templates/python_service_server/template/src/package_name/: component_impl.py  component_ros.py  node_impl.py  node_ros.py
package_generator_templates/templates/python_service_server/template/test/: test_component_service.test
package_generator_templates/templates/rostest/config/: dictionary.yaml
package_generator_templates/templates/rostest/template/: CMakeLists.txt
package_generator_templates/templates/rostest/test/: test_component_dyn_param.test  test_component_hz_loop.test  test_component_pub.test
