<?xml version="1.0"?>
<package format="2">
  <name>package_generator</name>
  <version>0.0.0</version>
  <description>
    The package_generator package
  </description>

  <maintainer email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</maintainer>

  <license>NPOSL-3.0</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/package_generator</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <exec_depend>python-termcolor</exec_depend>
  <exec_depend>python-jinja2</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>