<?xml version="1.0"?>
<package format="2">
  <name>package_generator_templates</name>
  <version>0.0.0</version>
  <description>Set of package templates used by the package_generator </description>

  <maintainer email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</maintainer>
  <author email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
