<?xml version="1.0"?>
<package format="2">
  <name>package_generator_templates</name>
  <version>0.0.0</version>
  <description>Set of package templates used by the package_generator </description>

  <maintainer email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</maintainer>
  <author email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>NPOSL-3.0</license>
  <author email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
