<?xml version="1.0"?>
<package format="2">
  <name>{packageName}</name>
  <description>{packageDescription}</description>
  <version>0.0.0</version>
  <maintainer email="{packageAuthorEmail}">{packageAuthor}</maintainer>
  <author email="{packageAuthorEmail}">{packageAuthor}</author>
  <license>{packageLicense}</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- user dependencies -->
  {foralldependencies}
  <depend>{dependencyName}</depend>
  {endforalldependencies}

  <!-- protected region additional package statements begin -->
  <!-- protected region additional package statements end -->

</package>
